# Vertical-Support-Bot

./: .gitignore  CONVENTIONS.md  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_enable_pgvector.py  0002_create_tenants_and_users.py
backend/app/: auth.py  config.py  db.py  main.py
backend/app/api/: auth_router.py  schemas.py
backend/app/models/: __init__.py  tenant.py  user.py
backend/app/services/: __init__.py
backend/eval/: README.md  test_tenant_isolation.py
backend/tests/: test_health.py
backend/worker/: __init__.py
frontend/: CLAUDE.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/_screens/: ConversationsScreen.tsx  OverviewScreen.tsx  SettingsScreen.tsx  SourcesScreen.tsx  WidgetScreen.tsx
frontend/src/app/docs/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/auth/: AuthForm.tsx
frontend/src/components/dashboard/: Sidebar.tsx  Topbar.tsx
frontend/src/components/product/: ChatBubble.tsx  ConfidenceMeter.tsx  EscalationFlag.tsx  MetricStat.tsx  SourceCitation.tsx  SourceDoc.tsx
frontend/src/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  Checkbox.tsx  Dialog.tsx  Icon.tsx  IconButton.tsx  Input.tsx  ProgressBar.tsx  Select.tsx  Switch.tsx  Tabs.tsx  Tag.tsx  Textarea.tsx  Toast.tsx
frontend/src/lib/: api.ts  auth.tsx
